--- a/01_aulas/libs/remark-css/metropolis.css
+++ b/01_aulas/libs/remark-css/metropolis.css
@@ -16,13 +16,6 @@
   text-shadow: none;
 }
 
-inverse {
-  width: 112px;
-  height: 47px;
-  border-bottom: 1px solid black;
-  position: absolute;
-}
-
 /* Removes colored bar from top of the slide resulting in a clear slide */
 .clear{
   border-top: 0px solid #FAFAFA;
@@ -98,6 +91,27 @@ h2, h3, h4 {
   text-align: left;
   margin-left: 15px;
   margin-bottom: -30px;
+}
+
+hr, .title-slide h2::after, .mline h1::after {
+  content: '';
+  display: block;
+  border: none;
+  background-color: #EB811B;
+  color: #EB811B;
+  height: 1px;
+}
+
+hr, .mline h1::after {
+  margin: 1em 15px 0 15px;
+}
+
+.title-slide h2::after {
+  margin: 10px 15px 35px 0;
+}
+
+.mline h1::after {
+  margin: 10px 15px 0 15px;
 }
 
 .remark-slide-number {
